# sti-lift-agv-hmi

./: README.md
AGVControl/: CMakeLists.txt
AGVControl/resources/: qml.qrc  qtquickcontrols2.conf
AGVControl/resources/qml/: Main.qml
AGVControl/resources/qml/components/: DashboardCard.qml  Footer.qml  Header.qml  NavButton.qml  StatusBadge.qml
AGVControl/resources/qml/screens/: AlarmScreen.qml  AutoScreen.qml  HomeScreen.qml  ManualScreen.qml  SettingsScreen.qml
AGVControl/src/: AgvController.cpp  AgvController.h  main.cpp
